--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,6 +3,8 @@ url = dbc:mysql://sql.v83.vhostgo.com:3306/linzekuan?useUnicode=true&amp;charact
 user = linzekuan
 password = lzk1314
 
-projectName = "dalgen"
+tables = uums_sys_app
+
+projectName = "uums"
 
 projectDirectory = "/Users/lambert/project/dalgen";
