--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -5,6 +5,6 @@ password = lzk1314
 
 tables = uums_sys_app
 
-projectName = "uums"
+projectName = uums
 
-projectDirectory = "/Users/lambert/project/dalgen";
+projectDirectory = /Users/lambert/project/dalgen
