--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -7,4 +7,4 @@ tables = uums_sys_app
 
 projectName = uums
 
-projectDirectory = /Users/lambert/project/dalgen
+projectDirectory = /Users/lambert/git/uums
