--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,8 +3,10 @@ url = dbc:mysql://sql.v83.vhostgo.com:3306/linzekuan?useUnicode=true&amp;charact
 user = linzekuan
 password = lzk1314
 
-tables = uums_sys_app
+tables = uums_auto_dalgen
 
 projectName = uums
 
-projectDirectory = /Users/lambert/git/uums
+#projectDirectory = /Users/lambert/git/uums
+
+projectDirectory = /Users/lambert/git/SSO-POM
