--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,12 +1,10 @@
 driver = com.mysql.jdbc.Driver
-url = dbc:mysql://sql.v83.vhostgo.com:3306/linzekuan?useUnicode=true&amp;characterEncoding=UTF-8
-user = linzekuan
-password = lzk1314
+url = jdbc:mysql://localhost:3306/db_yourbuyer_shop?useUnicode=true&amp;characterEncoding=UTF-8
+user = root
+password = 12345678
 
-tables = uums_auto_dalgen
+tables = shop_product
 
-projectName = uums
+projectName = management
 
-#projectDirectory = /Users/lambert/git/uums
-
-projectDirectory = /Users/lambert/git/SSO-POM
+projectDirectory = /Users/lambert/git/management
